Added or fixed some log messages